dungeon mappi on vähemmän gooofy ahh
-tein dungeon mapista kauniin(scroll ja isompi)
- se on edelleen ruma joten teen vielä kotona lisää muutoksia no worries